--- a/src/components/CardGrid.scss
+++ b/src/components/CardGrid.scss
@@ -1,10 +1,9 @@
 .card-grid {
-  margin: 0 auto;
-  max-width: 1000px;
+  border: red solid 2px;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-auto-rows: auto;
-  gap: 20px;
+  gap: 30px;
   font-family: sans-serif;
   padding-top: 30px;
 }
