--- a/src/components/CardGrid.scss
+++ b/src/components/CardGrid.scss
@@ -1,9 +1,8 @@
 .card-grid {
-  border: red solid 2px;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   grid-auto-rows: auto;
-  gap: 30px;
+  gap: 2rem;
   font-family: sans-serif;
   padding-top: 30px;
 }
