--- a/src/index.scss
+++ b/src/index.scss
@@ -5,13 +5,14 @@
 }
 
 body {
+  background-color: rgb(238, 238, 238);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .container {
-  max-width: 1100px;
+  max-width: 1000px;
   margin: auto;
-  padding: 0 20px;
+  padding: 0 2rem;
 }
 
 h1 {
