--- a/src/screens/ActorScreen.scss
+++ b/src/screens/ActorScreen.scss
@@ -1,9 +1,28 @@
 .actor-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
   figure {
     width: 50%;
   }
   img {
     display: block;
     width: 100%;
+  }
+
+  h2 {
+    margin-top: 1rem;
+  }
+
+  .birthday {
+    margin-bottom: 0.7rem;
+    font-weight: bold;
+    font-style: italic;
+  }
+
+  .bio {
+    padding: 0 2rem 2rem;
   }
 }
