--- a/src/components/styles/MovieCard.scss
+++ b/src/components/styles/MovieCard.scss
@@ -15,7 +15,7 @@
     margin-top: 0.5rem;
     text-align: center;
 
-    a {
+    .title {
       color: #333;
       font-weight: bold;
       font-size: 1.1em;
