refactor and style Pagination

--- a/src/components/styles/Pagination.scss
+++ b/src/components/styles/Pagination.scss
@@ -9,25 +9,37 @@
 }
 
 .pag-item {
-  padding: 0.3em 0.5em;
-  margin-right: 0.1rem;
   border-radius: 2px;
+  margin-right: 0.1rem;
 
   a {
+    border: 1px solid transparent;
+    border-radius: 2px;
+    display: block;
+    padding: 0.3em 0.5em;
     font-weight: bold;
-  }
 
-  &.active {
-    background-color: #00f;
+    &:hover {
+      background-color: lightblue;
+    }
 
-    a {
+    &.active {
+      background-color: #00f;
       color: #fff;
+
+      &:hover {
+        background-color: darken(#00f, 12%);
+      }
     }
   }
 }
 
-.pag-item.prev-next {
+.pag-item.prev-next > a {
   background-color: #9c9c9c;
+
+  &:hover {
+    background-color: darken(#9c9c9c, 12%);
+  }
 
   a {
     text-decoration: none;
